--- a/MS-Products.properties
+++ b/MS-Products.properties
@@ -1,5 +1,5 @@
 spring.application.name=MS-Products
-server.port = 8081
+#server.port = 8081
 
 spring.h2.console.enabled= true
 spring.datasource.username=admin
